// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidget03 matches custom props snapshot 1`] = `
<div
  class="card"
>
  <div
    class="card-body p-0 clearfix"
  >
    <i
      class="p-4 font-2xl mr-3 float-left someClasses"
    />
     
    <div
      class="h5 text-primary mb-0 pt-3"
    >
      header
    </div>
     
    <div
      class="text-muted text-uppercase font-weight-bold font-xs"
    >
      text
    </div>
  </div>
</div>
`;

exports[`CWidget03 matches default props snapshot 1`] = `
<div
  class="card"
>
  <div
    class="card-body p-0 clearfix"
  >
    <i
      class="p-4 font-2xl mr-3 float-left fa fa-cogs bg-primary"
    />
     
    <div
      class="h5 text-primary mb-0 pt-3"
    >
      header:string
    </div>
     
    <div
      class="text-muted text-uppercase font-weight-bold font-xs"
    >
      text:string
    </div>
  </div>
</div>
`;
